--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,40 @@
 body {
+	font-family: Arial, sans-serif;
+	font-size: 16px;
     text-align: center;
+}
+
+#mask {
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	position: absolute;
+	background: rgba(0, 0, 0, 0.7);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	transition: all 0.5s;
+}
+
+#mask.show {
+	opacity: 1;
+}
+
+.dialog {
+	border: 4px solid green;
+	border-radius: 12px;
+	background: rgb(180,225,180);
+	padding: 40px;
+}
+
+h1 {
+	font-size: 32px;
+	text-transform: uppercase;
+	margin: 0;
+}
+
+p {
+	margin-bottom: 32px;
 }
